Wed May 16 01:07:46 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/digest/md5/extconf.rb: use pkg_config for openssl so that
	  customized ssl paths are used for linking.  Backports fixes for
	  [ruby-core:44755].
	* ext/digest/rmd160/extconf.rb: ditto
	* ext/digest/sha1/extconf.rb: ditto
	* ext/digest/sha2/extconf.rb: ditto

Mon May 14 17:14:10 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): don't use IO.for_fd
	  to close IO objects. it create IO object with already closed fd, and
	  cause occasional Errno::EBADF in following tests. [ruby-core:45020]
	  [Bug #6228]

Mon May 14 17:14:10 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO): revert r35631. it broke the intent of
	  test_flush_in_finalizer1.  [ruby-core:43951] [Bug ##6228]

Mon May 14 13:18:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_string): insert a backslash only if
	  quoted by single quotes.  [ruby-dev:45281] [Bug #6069]

Mon May 14 13:17:57 2012  Luis Lavena  <luislavena@gmail.com>

	* test/ruby/test_io.rb (class TestIO):  Disable GC during IO tests to
	  avoid file descriptors being GC'ed. Suggestion by Tomoyuki Chikanaga
	  [ruby-core:43951][Bug #6228]

Fri May 11 14:09:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (PUSH): to prevent VALUE from GC,
	  must not cast it to unsigned long, which may be shorter than
	  VALUE, and the result can be mere garbage.

Fri May 11 01:04:54 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* io.c (io_unread): fix IO#pos with mode 'r' bug on Windows.
	  If the end of reading buffer is CR, io_unread() needs to unread one
	  more byte.
	  [ruby-core:44874] [Bug #6401]

	* test/ruby/test_io_m17n.rb (TestIO_M17N#test_pos_with_buffer_end_cr):
	  add a test for above.

Wed May  9 15:59:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
