@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 215
+#define RUBY_PATCHLEVEL 216
 
-#define RUBY_RELEASE_DATE "2012-05-16"
+#define RUBY_RELEASE_DATE "2012-05-18"
 #define RUBY_RELEASE_YEAR 2012
 #define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 16
+#define RUBY_RELEASE_DAY 18
 
 #include "ruby/version.h"
 
